git-svn-id: http://svn.code.sf.net/p/hwmail/code@184 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-adm/pom.xml
+++ b/trunk/hedwig-adm/pom.xml
@@ -16,6 +16,10 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>hedwig-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>hedwig-server</artifactId>
+		</dependency>
 
 		<!-- Apache commons -->
 		<dependency>
