--- a/trunk/assembly/src/release/conf/log4j.properties
+++ b/trunk/assembly/src/release/conf/log4j.properties
@@ -2,11 +2,12 @@
 log4j.rootLogger=FATAL, A0
 
 log4j.category.console=INFO, console
-log4j.category.com.hs.mail=ERROR, A1
-log4j.category.com.hs.mail.imap=DEBUG, A11
-log4j.category.com.hs.mail.imap.server.ImapServerHandler=FATAL, A11
-log4j.category.com.hs.mail.smtp=DEBUG, A12
-log4j.category.org.springframework.jdbc=DEBUG, A2
+log4j.category.com.hs.mail=ERROR, A0
+log4j.additivity.com.hs.mail=false
+log4j.category.com.hs.mail.smtp.processor.hook.MailLog=ERROR, A1
+log4j.additivity.com.hs.mail.smtp.processor.hook.MailLog=false
+#log4j.category.org.springframework.jdbc.core.JdbcTemplate=TRACE, A2
+#log4j.additivity.org.springframework.jdbc.core.JdbcTemplate=false
 
 # Simple Console Appender (default)
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -14,41 +15,23 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] %m%n
 
 log4j.appender.A0=org.apache.log4j.RollingFileAppender
-log4j.appender.A0.File=../logs/general.log
+log4j.appender.A0.File=${app.home}/logs/general.log
 log4j.appender.A0.MaxFileSize=10mb
 log4j.appender.A0.MaxBackupIndex=3
 log4j.appender.A0.layout=org.apache.log4j.PatternLayout
 log4j.appender.A0.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-# Rolling File Appender
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
-log4j.appender.A1.File=../logs/hedwig.log
-log4j.appender.A1.maxBackupIndex=10
-log4j.appender.A1.maxFileSize=10MB
-log4j.appender.A1.Append=false
+log4j.appender.A1.File=${app.home}/logs/mail.log
+log4j.appender.A1.MaxFileSize=10mb
+log4j.appender.A1.MaxBackupIndex=3
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %p %t %m%n
-
-log4j.appender.A11=org.apache.log4j.RollingFileAppender
-log4j.appender.A11.File=../logs/imap.log
-log4j.appender.A11.maxBackupIndex=10
-log4j.appender.A11.maxFileSize=10MB
-log4j.appender.A11.Append=true
-log4j.appender.A11.layout=org.apache.log4j.PatternLayout
-log4j.appender.A11.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %p %t %m%n
-
-log4j.appender.A12=org.apache.log4j.RollingFileAppender
-log4j.appender.A12.File=../logs/smtp.log
-log4j.appender.A12.maxBackupIndex=10
-log4j.appender.A12.maxFileSize=10MB
-log4j.appender.A12.Append=true
-log4j.appender.A12.layout=org.apache.log4j.PatternLayout
-log4j.appender.A12.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %p %t %m%n
+log4j.appender.A1.layout.ConversionPattern=%d: %m%n
 
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
 log4j.appender.A2.maxBackupIndex=10
 log4j.appender.A2.maxFileSize=10mb
-log4j.appender.A2.file=../logs/jdbc.log
+log4j.appender.A2.file=${app.home}/logs/jdbc.log
 log4j.appender.A2.append=true
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%m%n
