--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -9,6 +9,8 @@
 
 	<properties>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 		<aspectj-version>1.6.10</aspectj-version>
    	    <activation-version>1.1.1</activation-version>
 	    <javamail-version>1.4.7</javamail-version>
@@ -39,7 +41,7 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn+ssh://wonchul@svn.code.sf.net/p/hwmail/code/trunk</connection>
+		<connection>scm:svn:svn://svn.code.sf.net/p/hwmail/code/trunk</connection>
 	</scm>
 
 	<developers>
@@ -309,6 +311,10 @@
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.5.5</version>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>buildnumber-maven-plugin</artifactId>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -319,6 +325,39 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+				</configuration>
+			</plugin>
+	  		<plugin>
+	  			<groupId>org.apache.maven.plugins</groupId>
+	  			<artifactId>maven-jar-plugin</artifactId>
+	  			<configuration>
+	  				<archive>
+	  					<manifestEntries>
+	  						<Implementation-Title>Hedwig Mail Server</Implementation-Title>
+	  						<Implementation-Version>${project.version}</Implementation-Version>
+	  						<Build-Time>${maven.build.timestamp}</Build-Time>
+	  						<Implementation-Build>${buildNumber}</Implementation-Build>
+	  					</manifestEntries>
+	  				</archive>
+	  			</configuration>
+	  		</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<executions>
+					<execution>
+	                    <phase>validate</phase>
+	                    <goals>
+	                        <goal>create</goal>
+	                    </goals>
+	                </execution>
+				</executions>
+				<configuration>
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+					<getRevisionOnlyOnce>true</getRevisionOnlyOnce>
+					<useLastCommittedRevision>true</useLastCommittedRevision>
+					<scmDirectory>${basedir}/..</scmDirectory> 
 				</configuration>
 			</plugin>
 		</plugins>
