git-svn-id: http://svn.code.sf.net/p/hwmail/code@207 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/hedwig-webmail/src/main/webapp/WEB-INF/web.xml
@@ -80,8 +80,10 @@
   </servlet-mapping>
 
   <!-- Default session timeout (in minutes) -->
+  <!-- Note: the IMAP connection also has timeout, so set this value 
+       to be smaller then the IMAP timeout -->
   <session-config>
-    <session-timeout>1440</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
 
   <!-- Ensure that index.jsp and index.html is handled as index file -->
