git-svn-id: http://svn.code.sf.net/p/hwmail/code@222 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/pom.xml
+++ b/trunk/hedwig-webmail/pom.xml
@@ -72,7 +72,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons-lang3-version}</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>oro</groupId>
+		    <artifactId>oro</artifactId>
+		    <version>2.0.8</version>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
