Support POP3 protocol
git-svn-id: http://svn.code.sf.net/p/hwmail/code@224 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -75,3 +75,6 @@ message_size_limit=0
 # spamd_host=127.0.0.1
 # spamd_port=783
 # spamd_action=fileinto "Junk"
+
+# POP3 server configuration
+# pop3d_timeout=60000
