--- a/trunk/hedwig-webmail/src/main/webapp/WEB-INF/default.properties
+++ b/trunk/hedwig-webmail/src/main/webapp/WEB-INF/default.properties
@@ -5,4 +5,4 @@ mta.address=mail.hedwig.org
 
 wma.data.path=d:\\hedwig\\hedwig-0.6\\data
 wma.defer.path=d:\\hedwig\\hedwig-0.6\\data\\defer
-wma.session.debug=true
+wma.session.debug=false
