--- a/trunk/hedwig-webmail/src/main/webapp/WEB-INF/textproc.properties
+++ b/trunk/hedwig-webmail/src/main/webapp/WEB-INF/textproc.properties
@@ -1,13 +1,13 @@
 #Processors
 #processors=linewrapper,plaintexturl,text2html,inlineimage
-processors=text2html,xssdefend
+processors=inlineimage,text2html,xssdefend
 
 #processor.linewrapper.class=com.hs.mail.webmail.util.text.LineWrapper
 #processor.plaintexturl.class=com.hs.mail.webmail.util.text.PlainTextUrl
-#processor.inlineimage.class=com.hs.mail.webmail.util.text.InlineImageProcessor
+processor.inlineimage.class=com.hs.mail.webmail.util.text.InlineImageProcessor
 processor.text2html.class=com.hs.mail.webmail.util.text.Text2HtmlProcessor
 processor.xssdefend.class=com.hs.mail.webmail.util.text.XssDefendProcessor
 
 #Pipes
 pipes=cleanmessage
-pipe.cleanmessage.sequence=text2html,xssdefend
+pipe.cleanmessage.sequence=inlineimage,text2html
