ENHANCE: If message header contains non-ascii value, then auto detect the charset encoding.
git-svn-id: http://svn.code.sf.net/p/hwmail/code@232 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-api/pom.xml
+++ b/trunk/hedwig-api/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 
+		<!-- File encoding detection -->
+		<dependency>
+		   <groupId>org.apache.any23</groupId>
+		   <artifactId>apache-any23-encoding</artifactId>
+		   <version>2.1</version>
+		</dependency>
+
 		<!-- Apache commons -->
 		<dependency>
 			<groupId>commons-collections</groupId>
