--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -7,8 +7,8 @@
 
 compose.quote.html      = <br/><br/><br/>-----Original Message-----<br/><b>From:</b> {0}<br/><b>Sent:</b> {1}<br/><b>To:</b> {2}<br/><b>Subejct:</b> {3}<br/><br/>
 compose.quote.plain     = \n\n -----Original Message-----\n From: {0}\n Sent: {1}\n To: {2}\n Subejct: {3}
-compose.reserve.tosend  = Reserve to send
 compose.secure          = Secure
+compose.send.later      = Send later
 compose.subject.forward = [Forward] {0}
 compose.subject.reply   = [Reply] {0}
 compose.urgent          = Urgent
