--- a/trunk/hedwig-web/pom.xml
+++ b/trunk/hedwig-web/pom.xml
@@ -92,11 +92,11 @@
 		</dependency>
 		
 		<!-- Jackson JSON -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
-		</dependency> -->
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
