DnsServer moved from hedwig-server to hedwig-api
git-svn-id: http://svn.code.sf.net/p/hwmail/code@238 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-api/pom.xml
+++ b/trunk/hedwig-api/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>mail</artifactId>
 		</dependency>
 	
+		<!-- DNS -->
+		<dependency>
+			<groupId>dnsjava</groupId>
+			<artifactId>dnsjava</artifactId>
+		</dependency>
+
 		<!-- Apache JAMES Mime4j -->
 		<dependency>
 			<groupId>org.apache.james</groupId>
