mime_file_encoding
git-svn-id: http://svn.code.sf.net/p/hwmail/code@239 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -42,6 +42,7 @@ default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,S
 # imap_timeout=1800
 imap_trace_protocol=true
 imap_protocol_log=${app.home}\\logs\\imap-protocol.log
+# mime_file_encoding=EUC-KR
 
 # Network information
 # You MUST replace the following two lines with your environment
