git-svn-id: http://svn.code.sf.net/p/hwmail/code@257 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/assembly/src/release/conf/default.properties
+++ b/trunk/assembly/src/release/conf/default.properties
@@ -40,13 +40,13 @@ default_cache_fields=Bcc,Cc,Date,From,In-Reply-To,Message-ID,Received,Reply-To,S
 # default_quota=20
 # imap_thread_count=20
 # imap_timeout=1800
-imap_trace_protocol=true
-imap_protocol_log=${app.home}\\logs\\imap-protocol.log
+# imap_trace_protocol=true
+# imap_protocol_log=${app.home}\\logs\\imap-protocol.log
 # mime_file_encoding=EUC-KR
 
 # Network information
 # You MUST replace the following two lines with your environment
-mydomain=hedwig.org,handysoft.co.kr
+mydomain=hedwig.org
 myhostname=mail.hedwig.org
 # mynetworks=0.0.0.0/0.0.0.0
 
