refactoring folder tree disply
git-svn-id: http://svn.code.sf.net/p/hwmail/code@288 aade673b-a3a6-47a5-a793-c3231508b26e

--- a/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
+++ b/trunk/hedwig-webmail/src/main/resources/messages/viewcontent.properties
@@ -59,12 +59,11 @@ menu.filter.flagged = Flagged messages
 menu.filter.recent  = New messages
 menu.filter.unread  = Unread messages
 menu.folder         = Mailbox
-menu.folder.create  = Create a mailbox
-menu.folder.delete  = Delete a mailbox
+menu.folder.add     = Add
 menu.folder.empty   = Empty
-menu.folder.manage  = Mailbox manager
-menu.folder.move    = Move a mailbox
-menu.folder.rename  = Rename a mailbox
+menu.folder.manage  = Manage folders
+menu.folder.remove  = Remove
+menu.folder.rename  = Rename
 menu.forward        = Forward
 menu.list           = List
 menu.login          = Login
